<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintHeight_percent="0.15"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linearLayout3">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/GalleryBtn"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/CameraBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button1" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/CameraBtn"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/GalleryBtn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/button2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textview"
                android:layout_gravity="center"
                android:src="@drawable/default_image"
                android:contentDescription="@string/imageview" />

                <TextView
                    android:id="@+id/textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image"
                    app:layout_constraintBottom_toTopOf="@id/linearLayout4"
                    android:textSize="16sp"
                    android:text="@string/defaultText"
                    android:layout_gravity="center"
                    android:contentDescription="@string/textview" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textview"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="invisible">

                <EditText
                    android:id="@+id/edittext"
                    app:layout_constraintWidth_percent="0.9"
                    app:layout_constraintHeight_percent="0.15"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/QuestionBtn"
                    android:hint="@string/Textbox"
                    android:inputType="text"
                    android:autofillHints="text"
                    android:textSize="16sp"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/QuestionBtn"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintHeight_percent="0.15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edittext"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:text="@string/Ask" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>